code/tui/snapshots/inline/help/shortcuts_conversation.snap
---
source: code/tui/src/app/help_tests.rs
expression: "text(&render(&app, area))"
---
─ Keyboard shortcuts ───────────────────────────────────────────────────────────

  Compose                                 Session
  /                     Commands          ?          Keyboard shortcuts
  @                     Mention files     ←          Dashboard (empty input)
                        and plugins       Esc Esc    Open rewind checkpoints
  $                     Select a skill    shift+tab  Cycle task mode
  Enter                 Send message      shift+↓    Decrease thinking effort
  Shift+Enter / Ctrl+J  New line          shift+↑    Increase thinking effort
  Ctrl+R                Search input      ctrl+o     Copy last response
                        history           ctrl+c     Interrupt or quit
  ctrl+v                Attach            ctrl+z     Suspend Ash
                        clipboard
                        image

  Transcript
  PageUp / PageDown     Scroll
                        transcript
  Ctrl+Home / Ctrl+End  Oldest /
                        latest
  Ctrl+↑ / Ctrl+↓       Select a
                        message

  ↑/↓ scroll · Esc to close
