code/tui/snapshots/inline/help/shortcuts_medium_chinese.snap
---
source: code/tui/src/app/help_tests.rs
expression: output
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘



─ 键盘快捷键 ─────────────────────────────────────────────────────────────────────────────

  输入                                         会话
  /                     命令                   ?          键盘快捷键
  @                     引用文件和插件         ←          仪表盘（空输入）
  $                     选择技能               Esc Esc    打开回退检查点
  Enter                 发送消息               shift+tab  循环切换任务模式
  Shift+Enter / Ctrl+J  换行                   shift+↓    降低推理强度
  Ctrl+R                搜索输入历史           shift+↑    提高推理强度
  ctrl+v                附加剪贴板图片         ctrl+o     复制上一条回复
                                               ctrl+c     中断或退出
                                               ctrl+z     挂起 Ash

  正文
  PageUp / PageDown     滚动正文
  Ctrl+Home / Ctrl+End  最早 / 最新
  Ctrl+↑ / Ctrl+↓       选择消息
  Space                 展开选中的消息
  Enter                 查看选中消息的详情
  Esc                   返回输入

  /shortcuts 自定义

  ↑/↓ 滚动 · Esc 关闭
