code/tui/snapshots/inline/help/shortcuts_narrow_end_chinese.snap
---
source: code/tui/src/app/help_tests.rs
expression: bottom
---
─ 键盘快捷键 ───────────────────────────────

  shift+↑    提高推理强度
  ctrl+o     复制上一条回复
  ctrl+c     中断或退出
  ctrl+z     挂起 Ash

  正文
  PageUp / PageDown     滚动正文
  Ctrl+Home / Ctrl+End  最早 / 最新
  Ctrl+↑ / Ctrl+↓       选择消息
  Space                 展开选中的消息
  Enter                 查看选中消息的详情
  Esc                   返回输入

  /shortcuts 自定义

  ↑/↓ 滚动 · Esc 关闭
