code/tui/snapshots/inline/help/shortcuts_wide.snap
---
source: code/tui/src/app/help_tests.rs
expression: output
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘











─ Keyboard shortcuts ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  Compose                                              Session                                              Transcript
  /                     Commands                       ?          Keyboard shortcuts                        PageUp / PageDown     Scroll transcript
  @                     Mention files and plugins      ←          Dashboard (empty input)                   Ctrl+Home / Ctrl+End  Oldest / latest
  $                     Select a skill                 Esc Esc    Open rewind checkpoints                   Ctrl+↑ / Ctrl+↓       Select a message
  Enter                 Send message                   shift+tab  Cycle task mode                           Space                 Expand selected message
  Shift+Enter / Ctrl+J  New line                       shift+↓    Decrease thinking effort                  Enter                 View selected message
  Ctrl+R                Search input history           shift+↑    Increase thinking effort                                        details
  ctrl+v                Attach clipboard image         ctrl+o     Copy last response                        Esc                   Return to input
                                                       ctrl+c     Interrupt or quit
                                                       ctrl+z     Suspend Ash

  /shortcuts customize

  ↑/↓ scroll · Esc to close
